# HalIR_old

./: .gitignore  CMakeLists.txt  HalIR.kdev4  README.md
.kdev4/: HalIR.kdev4
HalIR/: CMakeLists.txt  Faddeeva.cpp  calcSpectra.cu  halir.cpp  halir.h  halir.hpp  halirSpec.cpp  halirSpec.h  halirSpec.hpp  halir_pylib.cpp  hitran.cpp  hitran.h  hitran.hpp  mankinfft.h  spc.hpp  spcformat.hpp  tips.h  tips.hpp  txt.input  voigt.h  voigt.hpp  voigtmetods.h
HalIR/Vtest/: err  plot  plot_new  plot_old  sign.h  uplot  uplot.nr  voigt.h  voigt_o.h  vtest  vtest.cpp  vtest.optrpt  vtest_avx  vtest_gcc  vtest_gccv  vtest_int
HalIR_PyInt/: halir_pylib.cpp
HalIR_PyLib/: CMakeLists.txt  halir_pylib.cpp
HalIR_PyQT/: CO_Fit.json  CO_O3_Fit.json  comp_entry.ui  comp_entry_ui.py  fit_tab.ui  fit_tab_ui.py  halir_ui.py  main.py  main_1.ui  myfit_tab.py  myproject_tab.py  project_CO_conc.json  project_CO_data.json  project_HalIR_Test.json  project_tab.ui  project_tab_ui.py  spc.py  utilities.py
HalIR_PyQT/CO_FIT/: CO.hpar
HalIR_PyQT/TestFit/: co.spc  co_c13.prm  co_t.spc
HalIRwx/: CMakeLists.txt  halirwx.aps  halirwx.cpp  halirwx.h  halirwx.rc  mdraw.cpp  mdraw.h  specrender.cpp  specrender.h
HalIRwx/Bitmaps/: cut.xpm  fit.xpm  halir.xpm  mfit.xpm  sim.xpm  stack.xpm  template.xpm
SpecSac/: CMakeLists.txt  spc.cpp  spc.h  spc.hpp  specsac.cpp  specsac.h  specsac.hpp  spectra.cpp  spectra.h  spectra.hpp
Test/: CMakeLists.txt  CO_0.13_res0.01_InSb.SPC  compiling_error.txt  genMtest.py  halirtest.py  plotf.py  run_halir_test.py  spc.py  test.cpp  testmolecs.py
Test/TestDat/: ch4_1.hkp  ch4_1.spc  co2_1.hkp  co2_1.out  co2_1.prm  co2_1.spc  co2_2.hkp  co2_2.out  co2_2.prm  co2_2.spc  co2_3.hkp  co2_3.out  co2_3.prm  co2_3.spc  co_1.hkp  co_1.out  co_1.prm  co_1.spc  co_2.hkp  co_2.out  co_2.prm  co_2.spc  co_c1.hkp  co_c1.out  co_c1.prm  co_c1.spc  co_c2.hkp  co_c2.out  co_c2.prm  co_c2.spc  co_c3.hkp  co_c3.out  co_c3.prm  co_c3.spc  co_c4.hkp  co_c4.out  co_c4.prm  co_c4.spc  co_c5.hkp  co_c5.out  (+64 more)
